[FIX] Fixed some flakes8 issues and improved tox file

--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,18 @@ envlist = py26, py27, py33, py34, py35
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/odoo_updates
-commands = python setup.py test
+commands =
+    test: python setup.py test
+    lint: flake8
+
 
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following lines:
-; deps =
-;     -r{toxinidir}/requirements.txt
+deps =
+     -r{toxinidir}/requirements_dev.txt
+     -r{toxinidir}/requirements.txt
+
+[flake8]
+max-line-length = 99
+exclude = docs/*,*.rst,*.md,.git,build/*,venv/*
+max-complexity = 10
